<resources>
    <string name="app_name">booksv2</string>
    <string name="phone">phone</string>
    <string name="record_list">record_list</string>
    <string name="save_record">save_record</string>
    <string name="age">age</string>
    <string name="name">name</string>
    <string name="textview">TextView</string>
    <string name="phone_here">Phone Here</string>
    <string name="age_here">Age Here</string>
    <string name="name_here">Name Here</string>
    <string name="update">update</string>
    <string name="titulo">titulo</string>
    <string name="autor">autor</string>
    <string name="sinopsis">sinopsis</string>
    <string name="edtfecha_de_publicacion">EdtFecha_de_Publicacion</string>
    <string name="editorial">editorial</string>
    <string name="cantidad_de_paginas">cantidad de paginas</string>
    <string name="idioma">idioma</string>
    <string name="categoria">categoria</string>
    <string name="publicacion">publicacion</string>
    <string name="cant_de_pag">cant de pag</string>
    <string name="fecha_de_publicacion">fecha_de_publicacion</string>
</resources>
